--- a/src/main/resources/assets/caramel/lang/ja_jp.json
+++ b/src/main/resources/assets/caramel/lang/ja_jp.json
@@ -1,5 +1,5 @@
 {
-  "caramel.fix248936.change.done": "アイコンを \"%s\"に変更しました。",
-  "caramel.fix248936.change.404": "\"%s\"という名前のアイコンが見つかりません。",
-  "caramel.fix248936.change.exception": "アイコンの変更中にエラーが発生しました。"
+  "caramel.chameleon.change.done": "アイコンを \"%s\"に変更しました。",
+  "caramel.chameleon.change.404": "\"%s\"という名前のアイコンが見つかりません。",
+  "caramel.chameleon.change.exception": "アイコンの変更中にエラーが発生しました。"
 }
