--- a/src/main/resources/assets/caramel/lang/ja_jp.json
+++ b/src/main/resources/assets/caramel/lang/ja_jp.json
@@ -1,4 +1,7 @@
 {
+  "caramel.chameleon.resetToast.title": "Chameleon設定が初期化された",
+  "caramel.chameleon.resetToast.desc": "エラーにより基本アイコンに変更されました。",
+
   "caramel.chameleon.change.done": "アイコンを \"%s\"に変更しました。",
   "caramel.chameleon.change.404": "\"%s\"という名前のアイコンが見つかりません。",
   "caramel.chameleon.change.exception": "アイコンの変更中にエラーが発生しました。"
