Support Windows OS (probably unstable)

--- a/src/main/resources/assets/caramel/lang/en_us.json
+++ b/src/main/resources/assets/caramel/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "modmenu.descriptionTranslation.chameleon-dock": "Changes the dock icon of macOS",
+  "modmenu.descriptionTranslation.chameleon-dock": "Changes the Minecraft icon displayed in the dock.",
   "caramel.chameleon.modmenu.title": "Chameleon Setting",
 
   "caramel.chameleon.resetToast.title": "Chameleon settings was reset",
