--- a/src/main/resources/assets/caramel/lang/ja_jp.json
+++ b/src/main/resources/assets/caramel/lang/ja_jp.json
@@ -1,5 +1,5 @@
 {
-  "modmenu.descriptionTranslation.chameleon-dock": "macOSでドックに表示されるMinecraftアイコンを変更します。",
+  "modmenu.descriptionTranslation.chameleon-dock": "ドックに表示されるMinecraftアイコンを変更します。",
   "caramel.chameleon.modmenu.title": "Chameleon 設定",
 
   "caramel.chameleon.resetToast.title": "Chameleon設定が初期化された",
