--- a/src/main/resources/assets/caramel/lang/ko_kr.json
+++ b/src/main/resources/assets/caramel/lang/ko_kr.json
@@ -1,5 +1,5 @@
 {
-  "modmenu.descriptionTranslation.chameleon-dock": "macOS에서 독에 표시되는 Minecraft 아이콘을 변경합니다.",
+  "modmenu.descriptionTranslation.chameleon-dock": "독에 표시되는 Minecraft 아이콘을 변경합니다.",
   "caramel.chameleon.modmenu.title": "Chameleon 설정",
 
   "caramel.chameleon.resetToast.title": "Chameleon 설정이 초기화됨",
